@@ -23,16 +23,21 @@ def setUp(test):
     zc.buildout.testing.install('Paste', test)
     zc.buildout.testing.install('PasteDeploy', test)
     zc.buildout.testing.install('PasteScript', test)
+    zc.buildout.testing.install('WebOb', test)
+    zc.buildout.testing.install('WebTest', test)
     zc.buildout.testing.install('ZConfig', test)
     zc.buildout.testing.install('ZODB3', test)
+    zc.buildout.testing.install('mechanize', test)
     zc.buildout.testing.install('pytz', test)
     zc.buildout.testing.install('transaction', test)
+    zc.buildout.testing.install('wsgi_intercept', test)
     zc.buildout.testing.install('zc.lockfile', test)
     zc.buildout.testing.install('zc.recipe.egg', test)
     zc.buildout.testing.install('zc.recipe.filestorage', test)
     zc.buildout.testing.install('zdaemon', test)
     zc.buildout.testing.install('zope.annotation', test)
     zc.buildout.testing.install('zope.app.appsetup', test)
+    zc.buildout.testing.install('zope.app.debug', test)
     zc.buildout.testing.install('zope.app.publication', test)
     zc.buildout.testing.install('zope.app.wsgi', test)
     zc.buildout.testing.install('zope.authentication', test)
@@ -42,6 +47,7 @@ def setUp(test):
     zc.buildout.testing.install('zope.component', test)
     zc.buildout.testing.install('zope.configuration', test)
     zc.buildout.testing.install('zope.container', test)
+    zc.buildout.testing.install('zope.contenttype', test)
     zc.buildout.testing.install('zope.copy', test)
     zc.buildout.testing.install('zope.deferredimport', test)
     zc.buildout.testing.install('zope.dottedname', test)
@@ -63,13 +69,9 @@ def setUp(test):
     zc.buildout.testing.install('zope.session', test)
     zc.buildout.testing.install('zope.site', test)
     zc.buildout.testing.install('zope.size', test)
-    zc.buildout.testing.install('zope.testing', test)
     zc.buildout.testing.install('zope.testbrowser', test)
+    zc.buildout.testing.install('zope.testing', test)
     zc.buildout.testing.install('zope.traversing', test)
-    zc.buildout.testing.install('zope.contenttype', test)
-    zc.buildout.testing.install('zope.app.debug', test)
-    zc.buildout.testing.install('wsgi_intercept', test)
-    zc.buildout.testing.install('mechanize', test)
     zc.buildout.testing.install_develop('z3c.recipe.paster', test)
 
 checker = renormalizing.RENormalizing([
