@@ -7,6 +7,8 @@ CHANGES
 
 - Fixed tests to run with current package versions and ``distribute``.
 
+- Fixed tests to run with `zope.testbrowser` 4.0.
+
 - Using python's ``doctest`` module instead of deprecated
   ``zope.testing.doctest``.
 
